--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -34,4 +34,8 @@ a {
     color: white;
     background: black;
   }
-}
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
