Change html font-family

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,3 +39,9 @@ a {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "JetBrains Mono", sans-serif;
+  }
+}
