--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family:
     -apple-system,
@@ -24,4 +24,19 @@ code {
     Consolas,
     "Courier New",
     monospace;
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "JetBrains Mono", sans-serif;
+  }
+
+  body {
+    color: white;
+    background: black;
+  }
 }
